--- a/aboutus.html
+++ b/aboutus.html
@@ -48,31 +48,33 @@
                     <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title">Fundación</h5>
-                            <p class="card-text">En 1980, los hermanos Carlos y Roberto Gómez, apasionados por los autos, fundaron "YourCar!" en su ciudad natal, Villa del Sol. Con ahorros y un pequeño préstamo, abrieron una modesta concesionaria de autos usados.</p>
+                            <p class="card-text">Nuestra pasión por la Fórmula 1 nos llevó a crear esta comunidad en 2024, con el objetivo de unir a los fanáticos y compartir la emoción de cada carrera.</p>
                         </div>
                     </div>
                     <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title">Primeros Años</h5>
-                            <p class="card-text">Con dedicación y atención personalizada, ganaron la confianza de la comunidad. Sus valores de honestidad e integridad atrajeron a los primeros clientes y empezaron a construir una sólida reputación.</p>
+                            <p class="card-text">En nuestros primeros años, comenzamos como un pequeño grupo de entusiastas, publicando noticias y análisis en redes sociales, y rápidamente ganamos seguidores fieles.</p>
                         </div>
                     </div>
                     <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title">Crecimiento y Expansión</h5>
-                            <p class="card-text">En los años 90, "YourCar!" creció significativamente. Incorporaron vehículos nuevos y abrieron una segunda sucursal en un barrio cercano. Su inventario se diversificó y lograron acuerdos con reconocidas marcas de automóviles.</p>
+                            <p class="card-text">Con el tiempo, la página creció exponencialmente, expandiéndose a un sitio web dedicado, con contenido exclusivo, entrevistas y eventos en vivo para miles de seguidores.</p>
                         </div>
                     </div>
                     <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title">Desafíos y Adaptación</h5>
-                            <p class="card-text">La crisis económica de 2001 fue un desafío, pero adaptaron sus estrategias ofreciendo financiamiento flexible y descuentos especiales. Con el tiempo, añadieron autos híbridos y eléctricos, manteniéndose al día con las tendencias del mercado.</p>
+                            <p class="card-text">A lo largo de los años, hemos enfrentado desafíos como la evolución de las plataformas digitales, adaptándonos para ofrecer una experiencia más interactiva y dinámica para nuestra comunidad.</p>
                         </div>
                     </div>
                     <div class="card mb-3">
                         <div class="card-body">
                             <h5 class="card-title">Futuro</h5>
-                            <p class="card-text">Hoy, la segunda generación de la familia Gómez dirige la concesionaria, que sigue creciendo y planea expandirse a nuevas ciudades. "YourCar!" continúa con su compromiso de ofrecer vehículos de calidad y un servicio honesto, siempre enfocado en la comunidad.</p>
+                            <p class="card-text">Miramos hacia el futuro con entusiasmo, comprometidos a seguir innovando y creciendo junto con la F1, brindando lo mejor para nuestra creciente base de fanáticos.
+
+                            </p>
                         </div>
                     </div>
                 </div>
