--- a/mercedes.html
+++ b/mercedes.html
@@ -110,7 +110,8 @@
                 <div class="text-center py-3">
                   &copy; 2024 F1 Fan Page
                 </div>
-              </footer>
+        </div>
+    </footer>
             
             <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
